<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">account</string>
    <string name="acelerador_down">acelerador</string>
    <string name="acercade">acerca</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="agc_02CAC09AC82718922B7A47188A3EF7CB928CA8D0EBE456FE3A763223DC25E33E">00502236E4271422BF5C01DA8BEA4714C04011C5EF86F251EB39D0D5E990CFC4351A671DA290C1288E305821E045A91EE10D3A6B509A4AC4603026B56C67C3637F</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">00B91683E32F43DDAC15276F809F670A99DA1CEDFBA3EA6C2AF143C5EC58DF7E4919A0FB01D6302D29EFA5CCDC339F2A0885EC3E814A16C4779E73EF88000C97512D04F80BF09A80A4D3F6DFA39B2709AF</string>
    <string name="agc_0692DAD5D21427E7CCE627E8DC1ED71FDB307EBDC4DFB3A554BC60FCCE38E034">0067BDF73E70733689193EE8EE6095F81C1573A2EDCA0A45B895E541D62C06BC61363BD9A7C22F0DB2F0676F736585105624F629A475518D7FD4D14C888F1DE4E7</string>
    <string name="agc_0DC3A56C1AC03D404A409264B0AED075A38F9EB082F5057704EA33D4B5B9B9C9">0084A53D5549325C7B108265FE044DB2E00F08D0E2F6A5E820B888E09AC79694EA01127837AC9F39C628605C8B12EBC969C18827D30202E338D87AFA2C6F49E7CBF5DB382E03A01710173C390D178332A8BC53750C95E49A6B91B206EC4399F7B1</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00ACBC951A4F011B8A748F03ECF2F7467AB796FCF9C3AF3365B3B7178492AE185C3A5DBBBA7238E10B8115EAE5FEA185BB01F4689856E63CFCFE37819E6BBF46821C20B6688F09A2051A2A76D793A42479B20B5A36BDEC927054D8FBD7725E4EF6</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">0003B74294C8AB3F47BFC7A8CFB6E283A80ED457B7B22598A0C887CDFD776B37633BABD8E11CB6B6C93DACCB5B10B56A6E</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">51156ABC0AB901CA5E0DCBE2FB334CC2</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">004373F290FD2439B1CE444504A5CE034F1436DCE134EA404ECE98244DA9BC17E3</string>
    <string name="agc_346F273384FE025F17324187A93E7E3BFB08DD081290E00F942EE066625A31DD">00FEA5DD53A9472793F65DF1B29F97984325F1F5CF93214709F24D50A33D8F4E0A367408FAC07802943CDD38A60D4BCD8A</string>
    <string name="agc_35623988AD86DCDA34F1257D6E93F34177702C6302115D897E60D38E0816CD35">00AFBB54E24D8573BA667E8E1F14C2A2FEE991B96A99451E20D9AA1C6DC27F914CFE013B9840E6C92926377A84483FFD99</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">00DD47AD37CF63B1B4AE4E102ED19D3554809AB8A631712229D8892655F18D6BC8B068882034B7C4FA10D526BF1FBE3B1A</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">0069539F48919D5B632670AA42D0449C8E7D2BD987161FB853078BCE9FB457B77976610BDC4DD245BAB7A817BAABFE5AA20E9A7319FF667A9CD5351C0491F261C405EE92513D39C8787D32B092A115F7910273923E6928AEDF4C059E48EC6BFEC7</string>
    <string name="agc_3FC6CD8093B4922272D7E36E11F6576A13C3767B8DFE7E7C806E0B096B233E18">002670336CD3E3B4F5DD8A95F3551368D7DAD1EF3D1DE2F4773996030868B376E07FFA0A50874C458D155A05FEAE235A3B</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">008C87DE47E04A8320C209ACDC9268F6F49E70A20AB96A262B536A28112674A208</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">0096F4893758279571529C22DF2DBA6CA719FA14BD643345A0474D3B276CB2AB1E0474E3A8E13C01D625E87807C22E1C50CC0C52A20681E415B6AA4B1E0CFC5EA5</string>
    <string name="agc_4A1001369614B0D938752C6AB4967DE352A3ADD13CAE741A7DF78EE728F74136">00847A5A829DAEDE21C47DD765976FA8A555D03A645E1DF00B1E4B3B77EF4FABF7</string>
    <string name="agc_4D79CE1E9E81D44FFC3CBFEC80D073F18409AAC96E2DAFB11951005E99B02EDB">0099F78BA58A7B343A5D09F8D8A62827381428962C251E7E5B665C8681531AF722CBF67E85A2751A7692A44E22B8918897</string>
    <string name="agc_4E59F3D37D339A997CACA4A0C457DAA94A1F044555D950F1F9835B0B6F600D38">000306929C439578E2AD9439B1E53DC54260174842948077E55C36D595EBFF7D72</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">00DD6F30E3C2E503572204B743BB2396B49468E6C6835113C486D542BB1E35AFA3DB94648B747D80C80C8A36AD8A9D3D25</string>
    <string name="agc_55A14C88686718883C90D427958F540EC05210E430ED915D772D8F34C350D08B">00AEF44C5C4A8C72A8A47BD6F364AD24AE033193AA1B27227C14541C2CBBF984F8A84413F035EBFD02DFC54B9B82312F6CD950007298B2E4DD8551487C907077DC</string>
    <string name="agc_56BB9FCDF7DAFDC12F18BE8BF765769B14E090D615353A1FF24238CC17EF2F2F">005517C1E99E622B323A93CFD133FD76D291F0CB25A393FE4FF6B9412848782C3434F7303EBCAD2CC3BF43E95645EFC428AB8C7C22D33CC24615AB25869429B6E2</string>
    <string name="agc_5B1EF301F6E8D26793B9699E972C1FE3B4563543360C2A380F9C42CED9967B7B">00E0131E26F6CBD407C4090C088816FAD94B446CA93D32FBB47DB1528413EAE68621DC433181D51736FC9BA28C035142B070931AE06818ED9D695791487986040A8E2FC2E08666B8346BCAE143021FCB58993B1735124C1DD89EE92922D941279B</string>
    <string name="agc_5B5AF298A58B98DB86A04DB0E3B1924F7EAC7A14CA781F042E5F999BD413CC9E">006C76EC1C1A6462EE4CD70591BD88B2872E730CCE29AAE78B0932798F5AC428C0E8E600569B736221A000195F4ACAF7F7</string>
    <string name="agc_63F3255D837430EC4C799B2B5A8091A554A101C6FAC114907463E723AF33B544">00A3F78AFB0642F39B880A77212D01E94FBC1C3F6F7410A99B8F73981E0A38E3857FF4CE21CF45502EE9D35B8AE6AB8DBDE3AAE58997D1ABA400CB52301FF2DCF7EA544FEDA8EDC5C9294FDF12EA83DAA4340B438315F4423522896BDA400BA5C5DA6E829D832B6A135376ACD8F6A8329A03CD2D1CF93394EB8C95086AEE95C4184C596BF86CABF11E3805D28A6017DD4F0EF537C7847E203B3E912E3780470403CB4B718D875DAC61964E8D5FF92531B7B663BD61449B25BB14FD6F1B45C179359DF37B99F1B3A03B0B9D84359BD7109331219B7CD96CC77ECCFAE51EB7E084FE7A38FEBAF9A7AB7B098DDE3DAF553AE4</string>
    <string name="agc_66412D70318648FA3BDD00A3CB2E73EE439F788EBA8010232B3B145A1ADE18F4">00B1040E8D063F543FBFFFA79FA9937828842D991D17241E7A1A75F2416F9D1DC552EDB0482B011E7F465189BB44D3266E</string>
    <string name="agc_69589FA8E5257AA8E3C477503B5586F4B4981C77F69B612318E3FC7AF1B00890">0067CF6D10A0C2490F65A9DB37830EE858051C0AB56B77AFB87D4BD9C00835458538DE086FACFBC9E35DC148B195532409</string>
    <string name="agc_6D239E4C2FF1354F6DBB62ED715B0B2A4058A2C1B368EB9F5FAF8B457ED28FA6">006D2366081D1D61687139614B6A05B1E23776BF64FD9AB02323968FF6ABB7ABD6B28DB367DF4D0FD2813143E48DDCB64D3B3F8D3F0DB8D73EC1A6EF390C2F1E14</string>
    <string name="agc_6DC2F1E7B3508CE97B8A34B184EAD19FADAAC83160422DE0BA2F78B0438C6A98">0052E24AEF0776A59B1BB5218E38DB5797DECE9EAC22A366C66E5553BD69D625A060F63B1F4720177DFF98492C504541D1</string>
    <string name="agc_7946AE46AB6C7F8CBDCAF61B99109C7C5309E95125FEA7458FBF603EC34F79F0">006B22FE4D663D5B83D725F6E97310FF276723DC4680AAD19F6B5815104E444DAE</string>
    <string name="ajustes">Ajustes</string>
    <string name="animes_cartoon">Animes-Cartoons</string>
    <string name="anuncios">consentimiento</string>
    <string name="apk">Descargar APK</string>
    <string name="autoreproducir">autoreproducir</string>
    <string name="availablePointsAutomatic">availablePointsAutomatic</string>
    <string name="avisolegal">avisolegal</string>
    <string name="buffer">buffer</string>
    <string name="busquedaI">Búsqueda Instantanea</string>
    <string name="cache">cache</string>
    <string name="checkfile">checkFileData</string>
    <string name="checkwifi">checkwifi</string>
    <string name="cm_defecto">cm_defecto</string>
    <string name="conf">conf</string>
    <string name="disabledoze">disable doze</string>
    <string name="doramas">Doramas</string>
    <string name="exit">Salir</string>
    <string name="facebook">Facebook</string>
    <string name="fix">arreglo</string>
    <string name="global">global</string>
    <string name="grupo">Grupo WhatsApp</string>
    <string name="hardware">hardware</string>
    <string name="instragram">Instagram</string>
    <string name="lista_cap">listacap</string>
    <string name="lock">lock</string>
    <string name="m_s_opciones">Opciones</string>
    <string name="manual">Manual Smart TV</string>
    <string name="movie">movie</string>
    <string name="mx_defecto">MX Player</string>
    <string name="numDownloads">numDownloads</string>
    <string name="otros_defecto">Others</string>
    <string name="peliculas">Películas</string>
    <string name="premium">premium</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="puerto">puerto</string>
    <string name="q_1080p">1080p</string>
    <string name="q_4K">4k</string>
    <string name="q_60fps">60fps</string>
    <string name="q_720p">720p</string>
    <string name="q_all">q_all</string>
    <string name="q_mayor">q_mayor</string>
    <string name="q_menor">q_menor</string>
    <string name="qualitys">quialitys</string>
    <string name="quitar_anuncios">Quitar Anuncios</string>
    <string name="recents">Recientes</string>
    <string name="recomendados">recomendados</string>
    <string name="reportdmca">reportdmca</string>
    <string name="rutadescargas">ruta</string>
    <string name="searchAvanced">searchAvanced</string>
    <string name="searchAvancedInclude">searchAvancedIncluide</string>
    <string name="separada">separada</string>
    <string name="series">Series</string>
    <string name="share">Compartir</string>
    <string name="slide">slide</string>
    <string name="social">Redes Sociales</string>
    <string name="streaminglocal">streaminglocal</string>
    <string name="telenovelas">Telenovelas</string>
    <string name="terminos">terminos</string>
    <string name="themoviedb">themoviedb</string>
    <string name="trustAllHosts">trustAllHosts</string>
    <string name="vista_l">lista</string>
    <string name="vista_p">portada</string>
    <string name="vista_t">titulos</string>
    <string name="vlc_defecto">VLC</string>
    <string name="x_defecto">X Player</string>
    <string name="zoomD">zoomD</string>
</resources>