<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:icon="@drawable/ic_anime" android:id="@id/nav_anime" android:title="@string/animes_cartoon" />
        <item android:icon="@drawable/ic_peli" android:id="@id/nav_pelis" android:title="@string/peliculas" />
        <item android:icon="@drawable/ic_serie" android:id="@id/nav_series" android:title="@string/series" />
        <item android:icon="@drawable/ic_dorama" android:id="@id/nav_serv1s" android:title="@string/doramas" />
        <item android:icon="@drawable/nav_teleno" android:id="@id/nav_serv3s" android:title="@string/telenovelas" />
        <item android:icon="@drawable/ic_fab" android:id="@id/nav_fab" android:title="Favoritos" />
        <item android:icon="@drawable/ic_fire" android:id="@id/nav_recents" android:title="@string/recents" />
        <item android:icon="@drawable/ic_des" android:id="@id/nav_des" android:title="Descargas" />
        <item android:icon="@drawable/ic_gestor_d" android:id="@id/nav_des2" android:title="Gestor de Descargas" />
        <item android:icon="@drawable/ic_history" android:id="@id/history" android:title="Historial Repr." />
    </group>
    <item android:id="@id/nav_com" android:title="@string/m_s_opciones">
        <menu>
            <item android:icon="@drawable/ic_info" android:id="@id/problemas" android:title="Inconvenientes Comunes" />
            <item android:icon="@drawable/ic_premium" android:id="@id/sc" android:visible="false" android:title="Activar Código - FREE" />
            <item android:icon="@drawable/ic_lanzar" android:id="@id/nav_manual" android:title="@string/manual" />
            <item android:icon="@drawable/ic_premium" android:id="@id/premium" android:visible="false" android:title="@string/quitar_anuncios" />
            <item android:icon="@drawable/ic_rewarded" android:id="@id/rewarded" android:title="Recompensas!" />
            <item android:icon="@drawable/ic_apk" android:id="@id/nav_apk" android:title="@string/apk" />
            <item android:icon="@drawable/ic_social" android:id="@id/social" android:visible="false" android:title="@string/social" />
            <item android:icon="@drawable/ic_ws" android:id="@id/ws" android:visible="false" android:title="@string/grupo" />
            <item android:icon="@drawable/ic_fb" android:id="@id/fb" android:visible="false" android:title="@string/facebook" />
            <item android:icon="@drawable/ic_ig" android:id="@id/ig" android:visible="false" android:title="@string/instragram" />
            <item android:icon="@drawable/dmca" android:id="@id/report" android:visible="false" android:title="Report DMCA" />
            <item android:icon="@drawable/ic_star" android:id="@id/calificar" android:visible="false" android:title="Califícanos" />
            <item android:icon="@drawable/ic_menu_share" android:id="@id/nav_share" android:title="@string/share" />
            <item android:icon="@drawable/ic_sett" android:id="@id/ajustes" android:title="@string/ajustes" />
            <item android:icon="@drawable/ic_power" android:id="@id/nav_exit" android:title="@string/exit" />
        </menu>
    </item>
</menu>
