<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/colorPrimary" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:z="http://schemas.android.com/apk/res-auto">
    <ProgressBar android:id="@id/login_progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" style="?android:progressBarStyleLarge" />
    <ScrollView android:id="@id/login_form" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/email_login_form" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center" android:id="@id/imageView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" z:srcCompat="@mipmap/ic_launcher_foreground" />
            <CheckBox android:textColor="@color/white" android:layout_gravity="center" android:id="@id/acepto" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="Acepto los términos y condiciones" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" z:buttonTint="@color/colorPrimaryDark" />
            <CheckBox android:textColor="@color/white" android:layout_gravity="center" android:id="@id/confm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="Acepto que soy mayor de edad (18+)" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" z:buttonTint="@color/colorPrimaryDark" />
            <EditText android:textSize="16.0sp" android:textColor="@color/white" android:textColorHint="@color/grey500" android:id="@id/email" android:background="@drawable/border_button2" android:padding="10.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_email" android:maxLines="1" android:singleLine="true" android:inputType="textEmailAddress" android:textCursorDrawable="@null" android:layout_marginStart="@dimen/left_right_1610_margin" android:layout_marginEnd="@dimen/left_right_1610_margin" />
            <EditText android:textSize="16.0sp" android:textColor="@color/white" android:textColorHint="@color/grey500" android:id="@id/password" android:background="@drawable/border_button2" android:padding="10.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/prompt_password" android:maxLines="1" android:singleLine="true" android:inputType="numberPassword" android:textCursorDrawable="@null" android:layout_marginStart="@dimen/left_right_1610_margin" android:layout_marginEnd="@dimen/left_right_1610_margin" />
            <Button android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/email_sign_in_button" android:background="@drawable/border_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/action_sign_in" android:paddingStart="5.0dip" android:paddingEnd="5.0dip" style="?android:textAppearanceSmall" />
            <Button android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/registrar" android:background="@drawable/border_button" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="Solicitar Correo de Acceso" android:paddingStart="5.0dip" android:paddingEnd="5.0dip" style="?android:textAppearanceSmall" />
            <Button android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/soporte" android:background="@drawable/border_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="Soporte - Problema de EMAIL" android:paddingStart="5.0dip" android:paddingEnd="5.0dip" style="?android:textAppearanceSmall" />
            <Button android:textStyle="bold" android:id="@id/premiumU" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="He adquirido una cuenta PRO en versiones anteriores" style="?android:textAppearanceSmall" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
